--- a/static/css/main_styles.css
+++ b/static/css/main_styles.css
@@ -7,19 +7,23 @@ html, body {
     background-color: rgb(236, 204, 148);
     margin: 0;
     font-family: 'Ubuntu', sans-serif;
+    margin-top: 1em;
 }
 
 header {
     width: 100%;
-    height: 15%;
+    height: 5%;
     display: flex;
     justify-content: center;
     margin: 0;
+    position: fixed;
+    top: 0;
+    z-index: 1;
 }
 
 ul.sections {
     list-style-type: none;
-    background-color: burlywood;
+    background-color: beige;
     width: 100%;
     height: 100%;
     display: flex;
@@ -70,7 +74,7 @@ div.intro {
 
 div.descr {
     background-color: beige;
-    width: 60%;
+    width: 50%;
     height: 60%;
     border-radius: 0.5em;
     border: 3px solid grey;
@@ -111,13 +115,13 @@ div.content {
     width: 60%;
     background-color: burlywood;
     border: 4px solid rgb(199, 133, 48);
-    padding: 2em;
     border-radius: 10px 100px / 120px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    padding-left: 0;
+    padding-top: 1em;
 }
 
 div.content > p {
@@ -132,7 +136,7 @@ div.refs {
 }
 
 div.refs img {
-    width: 50px;
+    width: 3em;
     border-radius: 2em;
     margin: 0 0.5em;
 }
@@ -190,8 +194,9 @@ div.project:hover div.image {
 }
 
 div.project:hover div.image img {
-    width: 21em;
-    margin: 1em 2em;
+    width: 23em;
+    height: 13em;
+    margin: 1em;
 }
 
 div.project:hover .description {
@@ -209,6 +214,7 @@ div.project:hover .description {
 div.project .caption {
     width: 100%;
     text-align: center;
+    margin-bottom: .1em;
 }
 
 footer h4 {
