--- a/templates/main_page.html
+++ b/templates/main_page.html
@@ -15,30 +15,33 @@
     </div>
 {% endmacro %}
 
-{% block head %}
 <!DOCTYPE html>
 <html lang="en">
 
+{% block head %}
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
+
     <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@300&display=swap" rel="stylesheet">
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main_styles.css') }}">
+    {% block css %}
+        <link rel="stylesheet" href="{{ url_for('static', filename='css/main_styles.css') }}">
+    {% endblock css %}
 </head>
 
 {% endblock %}
-
 
 <body>
 {% block body %}
     <header>
         <ul class="sections">
-        <li class="sect-item"><a  href="{{ url_for('main_page') }}"> Home </a></li>
-        <li class="sect-item"><a  href="{{ url_for('project_list')}}"> Projects </a></li>
-        <li><div>Skills</div></li>
-    </ul>
+            <li class="sect-item"><a  href="{{ url_for('main_page') }}"> Home </a></li>
+            <li class="sect-item"><a  href="{{ url_for('project_list')}}"> Projects </a></li>
+            <li><div>Skills</div></li>
+        </ul>
     </header>
     
     {% block intro %}
