--- a/templates/projects.html
+++ b/templates/projects.html
@@ -6,9 +6,12 @@
 {% endblock %}
 
 {% block intro %}
-    <h1 class="greeting">
-        Projects
-    </h1>
+    <div class="intro">
+        <h1 class="greeting">
+            Projects
+        </h1>
+    </div>
+
 
 {% endblock %}
 
