--- a/static/css/main_styles.css
+++ b/static/css/main_styles.css
@@ -5,9 +5,9 @@ html, body {
     align-items: center;
     flex-direction: column;
     background-color: rgb(236, 204, 148);
-    margin: 0;
     font-family: 'Ubuntu', sans-serif;
-    margin-top: 1em;
+    margin: 1em 0 0;
+    font-size: 0.7vw;
 }
 
 header {
@@ -61,7 +61,7 @@ h1.greeting {
 
 div.intro {
     width: 100%;
-    height: 30%;
+    height: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -74,8 +74,8 @@ div.intro {
 
 div.descr {
     background-color: beige;
-    width: 50%;
-    height: 60%;
+    width: 45%;
+    height: 20%;
     border-radius: 0.5em;
     border: 3px solid grey;
     margin-bottom: 2em;
@@ -104,29 +104,10 @@ div.features > p {
 
 div.descr > img {
     float: left;
-    height: 90%;
+    width: 30%;
     margin: 0.5em;
     border-radius: 1em;
     position: relative;
-}
-
-div.content {
-    height: 90%;
-    width: 60%;
-    background-color: burlywood;
-    border: 4px solid rgb(199, 133, 48);
-    border-radius: 10px 100px / 120px;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    padding-left: 0;
-    padding-top: 1em;
-}
-
-div.content > p {
-    font-size: 1.5em;
-    margin: 0.5em;
 }
 
 div.refs {
@@ -147,12 +128,31 @@ div.refs img:hover {
     /*box-shadow: 5px 5px 10px black;*/
 }
 
+div.content {
+    height: 80%;
+    width: 60%;
+    background-color: burlywood;
+    border: 4px solid rgb(199, 133, 48);
+    border-radius: 10px 100px / 120px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-left: 0;
+    padding-top: 1em;
+}
+
+div.content > p {
+    font-size: 1.5em;
+    margin: 0.5em;
+}
 
 div.content > ul.projects {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     list-style-type: none;
+    padding-left: 0;
 }
 
 ul.projects li > div.projects-row {
@@ -160,6 +160,7 @@ ul.projects li > div.projects-row {
     display: flex;
     justify-content: space-around;
     margin: 1em;
+    padding-left: 0;
 }
 
 div.content div.project {
