--- a/templates/skills.html
+++ b/templates/skills.html
@@ -25,9 +25,9 @@
             </ul>
         </div>
         <div class="row">
-            <h2 class="caption">Education</h2>
+            <h2 class="caption">Achievements</h2>
             <ul>
-                <li>Python</li>
+                <li></li>
                 <li>C++</li>
                 <li></li>
             </ul>
@@ -35,37 +35,41 @@
     </div>
     <div class="column">
         <div class="row">
-            <h2 class="caption">Preferred languages</h2>
+            <h2 class="caption">Technologies I know</h2>
             <ul>
-                <li>Python</li>
-                <li>C++</li>
-                <li></li>
-            </ul>
-        </div>
-        <div class="row">
-            <h2 class="caption">Preferred languages</h2>
-            <ul>
-                <li>Python</li>
-                <li>C++</li>
-                <li></li>
-            </ul>
-        </div>
-    </div>
+                <li>
+                    <ul>Data analysis libraries:
+                        <li>pandas</li>
+                        <li>numpy</li>
+                        <li>matplotlib</li>
+                        <li>plotly</li>
+                    </ul>
+                </li>
 
-     <div class="column">
-        <div class="row">
-            <h2 class="caption">Preferred languages</h2>
-            <ul>
-                <li>Python</li>
-                <li>C++</li>
-                <li></li>
+                <li>
+                    <ul>ML/DL libraries:
+                        <li>skikit-learn</li>
+                        <li>PyTorch</li>
+                        <li>Keras</li>
+                    </ul>
+                </li>
+                <li>
+                    Creation of telegram bots with aiogram
+                </li>
+                <li>
+                    Backend development with Flask
+                </li>
+                <li>
+                    Databases: MySQL, sqlite
+                </li>
+
             </ul>
         </div>
         <div class="row">
-            <h2 class="caption">Preferred languages</h2>
+            <h2 class="caption">Education</h2>
             <ul>
-                <li>Python</li>
-                <li>C++</li>
+                <li>Mostly self taught (free courses and articles)</li>
+                <li>Deep Learning School</li>
                 <li></li>
             </ul>
         </div>
