--- a/static/css/project_styles.css
+++ b/static/css/project_styles.css
@@ -1,12 +1,27 @@
-img.big {
-    width: 50%;
-    float: left;
-    margin: 1em;
+div.images {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    width: 60%;
+}
+
+div.images > img {
+    width: 80%;
+    margin: 1em 0;
 }
 
 div.content {
     padding: 2em 1em;
     padding-bottom: 5em;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: flex-start;
+}
+
+div.content > div.description {
+    width: 95%;
 }
 
 div.content p {
