--- a/static/css/project_styles.css
+++ b/static/css/project_styles.css
@@ -49,4 +49,30 @@ div.comments form {
     background-color: beige;
     border: 3px saddlebrown solid;
     border-radius: 1em;
+    font-size: 80%;
+}
+
+div.comment {
+    background-color: whitesmoke;
+    border: 2px saddlebrown solid;
+    border-radius: 0.5em;
+    padding: 0.5em;
+    padding-top: 0;
+    margin-top: 2em;
+}
+
+div.comment > .user_name {
+    background-color: black;
+    color: whitesmoke;
+    margin: 0.05em 0.1em;
+    margin-bottom: 0.5em;
+    padding-left: 1em;
+}
+
+div.comment > article {
+}
+
+div.comment .date {
+    font-size: 80%;
+    color: #a9a7a7;
 }
