--- a/templates/project_page.html
+++ b/templates/project_page.html
@@ -30,6 +30,15 @@
             <form action='' method="post" class="login-form">
                 {{ display_form(form) }}
             </form>
+            <hr>
+            {% for comm in comments %}
+                <div class="comment">
+                    <h4 class="user_name">
+                        {{ comm.user_name }}, <span class="date">{{ comm.date }}</span>
+                    </h4>
+                    <article>{{ comm.text }}</article>
+                </div>
+            {% endfor %}
         </div>
 
     </div>
